# plsec

./: .gitignore  .gitmodules  .plsec-manifest.json  .trivyignore.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  Makefile  OVERLAY-README.md  PROJECT.md  README.md  SECURITY.md  SUPPORTED-CONFIGS.md  TESTING.md  claude-bootstrap-overlay.tgz  opencode.json  pyproject.toml
.github/workflows/: test-bootstrap.yml  test-plsec.yml
.wrangler/cache/: pages.json  wrangler-account.json
docs/: DESIGN-AGENT-MONITORING.md  DESIGN-CREATE-SECURE.md  DESIGN-INSTALL-RESET-UNINSTALL.md  DESIGN-PLSEC-ENGINE.md  DESIGN-PLSEC-REFACTOR.md  HANDOFF-20260309.md  HANDOFF-bootstrap.md  INSTALL.md  agents-pydantic.md  bootstrap-testing.md  build-process-design.md  build-process.md  ci-cd-integration.md  claude-pydantic.md  dependency-vulnerability-scanners.md  plsec-status-design.md  roadmap.md  scanner-limitations.md  secure-tool-handling.md  troubleshooting.md  writing-engines.md
docs/archive/: HANDOFF-bootstrap.md  agents-pydantic.md  claude-pydantic.md
docs/commands/: plsec-status.md
docs/design/: DESIGN-CREATE-SECURE.md  DESIGN-INSTALL-RESET-UNINSTALL.md  DESIGN-PLSEC-ENGINE.md  DESIGN-PLSEC-REFACTOR.md  DESIGN-TOOL-REGISTRY.md
homebrew/: README.md  plsec.rb
scripts/: assemble-bootstrap.sh  setup-bats.sh  test-assembler-escaping.sh
src/plsec/: __init__.py  cli.py
src/plsec/commands/: __init__.py  create.py  doctor.py  init.py  install.py  integrity.py  proxy.py  reset.py  scan.py  secure.py  uninstall.py  validate.py
src/plsec/configs/: __init__.py  compatibility.yaml  templates.py
src/plsec/configs/_template_files/: __init__.py  claude-md-strict.md  hook-pre-commit.sh  opencode-json-strict.json  pipelock-start.sh  plsec-audit.sh  plsec-status.sh  plsec.yaml.template  skeleton.bash  trivy-secret.yaml  trivy.yaml  wrapper-claude.sh  wrapper-opencode.sh  wrapper-scan.sh
src/plsec/configs/presets/: __init__.py  balanced.toml  minimal.toml  paranoid.toml  strict.toml
src/plsec/core/: __init__.py  agents.py  compatibility.py  config.py  detector.py  health.py  inventory.py  output.py  presets.py  processes.py  scanners.py  tools.py  wizard.py
src/plsec/core/adapters/: __init__.py  claude.py  opencode.py
src/plsec/engine/: __init__.py  agent_constraint.py  bandit.py  base.py  container_isolation.py  correlation.py  dependency.py  orchestrator.py  policy.py  registry.py  semgrep.py  trivy_dependency.py  trivy_misconfig.py  trivy_secrets.py  types.py  verdict.py
templates/bootstrap/: claude-md-balanced.md  opencode-json-balanced.json  opencode-json-strict.json  plsec-status.sh  skeleton.bash  trivy-secret.yaml  wrapper-claude.sh  wrapper-opencode.sh
tests/: __init__.py  conftest.py  test_agents.py  test_cli.py  test_compatibility.py  test_config.py  test_create.py  test_detector.py  test_doctor.py  test_health.py  test_init.py  test_install_cmd.py  test_integrity.py  test_inventory.py  test_output.py  test_plsec.py  test_presets.py  test_processes.py  test_proxy.py  test_reset.py  test_scan.py  test_scanners.py  test_secure.py  test_templates.py  test_tools.py  test_uninstall.py  test_validate.py
tests/bats/: Containerfile  run-in-container.sh
tests/bats/golden/: README.md  claude-md-balanced.md  claude-md-strict.md  opencode-json-strict.json  trivy-secret.yaml  trivy.yaml
tests/bats/integration/: test_bootstrap.bats  test_dry_run.bats  test_generated_files.bats  test_idempotency.bats  test_status.bats
tests/bats/test_helper/: common.bash
tests/bats/unit/: test_args.bats  test_detect_os.bats  test_helpers.bats  test_status.bats  test_wrapper_logging.bats
tests/engine/: test_agent_constraint.py  test_bandit.py  test_base.py  test_container_isolation.py  test_correlation.py  test_dependency_base.py  test_orchestrator.py  test_policy.py  test_registry.py  test_semgrep.py  test_trivy.py  test_trivy_dependency.py  test_trivy_misconfig.py  test_types.py  test_verdict.py
