[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plsec"
dynamic = ["version"]
description = "Tools to help with mititgating AI coding assistant security risks."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Peerlabs", email = "security@peerlabs.io" }
]
keywords = [
    "security",
    "ai",
    "claude",
    "opencode",
    "llm",
    "coding-assistant",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "ty",
]

[project.scripts]
plsec = "plsec.cli:app"

[project.urls]
Homepage = "https://github.com/peerlabs/plsec"
Documentation = "https://github.com/peerlabs/plsec#readme"
Repository = "https://github.com/peerlabs/plsec"
Issues = "https://github.com/peerlabs/plsec/issues"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.wheel]
packages = ["src/plsec"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "S",    # flake8-bandit
]
ignore = [
    "S101",  # assert used (fine in tests)
    "S603",  # subprocess without shell=True (we check this)
    "S607",  # partial path (we use shutil.which)
]

[tool.ruff.lint.per-file-ignores]
"src/plsec/commands/*.py" = ["B008"]  # typer requires Option/Argument in defaults
"src/plsec/configs/templates.py" = ["S105", "E501"]  # template strings, not real secrets; long YAML lines

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=plsec --cov-report=term-missing"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "ty",
]

[tool.uv.sources]
# Add any local or git sources here if needed
